@@ -13,7 +13,6 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.UUID;
 
@@ -27,58 +26,58 @@ public class WsService {
     private final RelationMapper relationMapper;
 
     public void sendRequestIncomingEvent(Request request) {
-        List<UUID> userIdList = Collections.singletonList(request.getRecipientId());
+        List<UUID> userIdList = List.of(request.getRecipientId());
         RequestDTO requestDTO = requestMapper.pojoToDTO(request);
-        WsEventDTO wsEventWithUsersDTO = new WsEventDTO(userIdList,
-                WsEventType.CONTACT_REQUEST_INCOMING, requestDTO);
-        wsServiceClient.sendEvent(wsEventWithUsersDTO);
+        WsEventDTO wsEventDTO = new WsEventDTO(userIdList, WsEventType.CONTACT_REQUEST_INCOMING,
+                requestDTO, request.getRequesterId());
+        wsServiceClient.sendEvent(wsEventDTO);
     }
 
     public void sendRequestOutcomingEvent(Request request) {
-        List<UUID> userIdList = Collections.singletonList(request.getRequesterId());
+        List<UUID> userIdList = List.of(request.getRequesterId());
         RequestDTO requestDTO = requestMapper.pojoToDTO(request);
-        WsEventDTO wsEventWithUsersDTO = new WsEventDTO(userIdList,
-                WsEventType.CONTACT_REQUEST_OUTCOMING, requestDTO);
-        wsServiceClient.sendEvent(wsEventWithUsersDTO);
+        WsEventDTO wsEventDTO = new WsEventDTO(userIdList, WsEventType.CONTACT_REQUEST_OUTCOMING,
+                requestDTO, request.getRequesterId());
+        wsServiceClient.sendEvent(wsEventDTO);
     }
 
     public void sendAcceptIncomingEvent(Request request) {
-        List<UUID> userIdList = Collections.singletonList(request.getRecipientId());
+        List<UUID> userIdList = List.of(request.getRecipientId());
         RequestDTO requestDTO = requestMapper.pojoToDTO(request);
-        WsEventDTO wsEventWithUsersDTO = new WsEventDTO(userIdList,
-                WsEventType.CONTACT_ACCEPT_INCOMING, requestDTO);
-        wsServiceClient.sendEvent(wsEventWithUsersDTO);
+        WsEventDTO wsEventDTO = new WsEventDTO(userIdList, WsEventType.CONTACT_ACCEPT_INCOMING,
+                requestDTO, request.getRecipientId());
+        wsServiceClient.sendEvent(wsEventDTO);
     }
 
     public void sendAcceptOutcomingEvent(Request request) {
-        List<UUID> userIdList = Collections.singletonList(request.getRequesterId());
+        List<UUID> userIdList = List.of(request.getRequesterId());
         RequestDTO requestDTO = requestMapper.pojoToDTO(request);
-        WsEventDTO wsEventWithUsersDTO = new WsEventDTO(userIdList,
-                WsEventType.CONTACT_ACCEPT_OUTCOMING, requestDTO);
+        WsEventDTO wsEventDTO = new WsEventDTO(userIdList, WsEventType.CONTACT_ACCEPT_OUTCOMING,
+                requestDTO, request.getRecipientId());
+        wsServiceClient.sendEvent(wsEventDTO);
+    }
+
+    public void sendDeleteIncomingEvent(Request request, UUID userId) {
+        List<UUID> userIdList = List.of(request.getRecipientId());
+        RequestDTO requestDTO = requestMapper.pojoToDTO(request);
+        WsEventDTO wsEventWithUsersDTO = new WsEventDTO(userIdList, WsEventType.CONTACT_DELETE_INCOMING,
+                requestDTO, userId);
         wsServiceClient.sendEvent(wsEventWithUsersDTO);
     }
 
-    public void sendDeleteIncomingEvent(Request request) {
-        List<UUID> userIdList = Collections.singletonList(request.getRecipientId());
+    public void sendDeleteOutcomingEvent(Request request, UUID userId) {
+        List<UUID> userIdList = List.of(request.getRequesterId());
         RequestDTO requestDTO = requestMapper.pojoToDTO(request);
-        WsEventDTO wsEventWithUsersDTO = new WsEventDTO(userIdList,
-                WsEventType.CONTACT_DELETE_INCOMING, requestDTO);
+        WsEventDTO wsEventWithUsersDTO = new WsEventDTO(userIdList, WsEventType.CONTACT_DELETE_OUTCOMING,
+                requestDTO, userId);
         wsServiceClient.sendEvent(wsEventWithUsersDTO);
     }
 
-    public void sendDeleteRequestOutcomingEvent(Request request) {
-        List<UUID> userIdList = Collections.singletonList(request.getRecipientId());
-        RequestDTO requestDTO = requestMapper.pojoToDTO(request);
-        WsEventDTO wsEventWithUsersDTO = new WsEventDTO(userIdList,
-                WsEventType.CONTACT_DELETE_OUTCOMING, requestDTO);
-        wsServiceClient.sendEvent(wsEventWithUsersDTO);
-    }
-
-    public void sendDeleteRelationEvent(Relation relation) {
-        List<UUID> userIdList = Collections.singletonList(relation.getFirstUserId());
+    public void sendDeleteRelationEvent(Relation relation, UUID userId) {
+        List<UUID> userIdList = List.of(relation.getFirstUserId(), relation.getSecondUserId());
         RelationDTO relationDTO = relationMapper.pojoToDTO(relation);
-        WsEventDTO wsEventWithUsersDTO = new WsEventDTO(userIdList,
-                WsEventType.CONTACT_DELETE, relationDTO);
+        WsEventDTO wsEventWithUsersDTO = new WsEventDTO(userIdList, WsEventType.CONTACT_DELETE,
+                relationDTO, userId);
         wsServiceClient.sendEvent(wsEventWithUsersDTO);
     }
 
